--- a/examples/rtmp2rtc/index.html
+++ b/examples/rtmp2rtc/index.html
@@ -20,6 +20,10 @@
 
     let videoElement;
 
+	let url = new URL(document.URL);
+
+	console.dir(url);
+
     async function connect() 
     {
 
@@ -48,7 +52,7 @@
             sdp: offer.sdp
         }
 
-        let res = await fetch('http://127.0.0.1:8000/rtc/v1/play', {
+        let res = await fetch(url.origin + '/rtc/v1/play', {
             method: 'post',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify(data)
