--- a/examples/one2many/index.html
+++ b/examples/one2many/index.html
@@ -18,6 +18,9 @@
 
         window.localStorage.setItem('debug', '*');
 
+        let url = new URL(document.URL);
+
+        console.dir(url);
 
         let videoElement;
 
@@ -54,7 +57,7 @@
 
             console.log("request data", data)
 
-            let res = await fetch('http://127.0.0.1:8000/rtc/v1/play', {
+            let res = await fetch(url.origin + '/rtc/v1/play', {
                 method: 'post',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(data)
